# Exile

./: .gitignore  CMakeLists.txt  CMakePresets.json  ConanPresets.json  ReadMe.md
conan/: ReadMe.md  conanfile.py  deps.cmake
conan/profiles/macos/: default.profile
conan/profiles/windows/: default.profile  llvm.profile
src/: CMakeLists.txt  main.cpp  mypkg.cpp
test_package/: conanfile.py
